# voice2text

./: .env.example  Dockerfile  pyproject.toml
src/: voice2text-funasr-x.py  voice2text-man.py  voice2text-x.py  voice2text-xx.py
src/app/: voice2text.py
src/app/core/: 26_transcription.json  26_transcription.txt  client.py  server.py
src/core/: voice2text-funasr-x.py
src/core_pak/: server.py
src/core_pak/voice2text/: funasr_transcriber.py
src/data/: 家有儿女吃饭_transcript_with_speaker_id.txt
src/voice2text/: client.py  server.py
src/voice2text/api/: schema.py
src/voice2text/tran/: app.py  client.py  config.py  example.py  filesystem.py  funasr_transcriber.py  server.py  speech2text.py  tran2.py  vector_base.py  voiceprint_manager.py  voiceprint_manager_v2.py
src/voice2text/tran/schema/: dto.py  prints.py
