[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "voice2text"
version = "0.1.0"
description = "A sample Python project"
readme = "README.md"
requires-python = ">=3.11"
#license = {text = "MIT"}
#authors = [
#{name = "", email = "your.email@example.com"},
#]
dependencies = [
    "openai-whisper",
    "whisperx",
    "flask==2.0.1",
    "gunicorn==20.1.0",
    "werkzeug==2.0.1",
    "requests==2.28.1",
    #    "torch",
    #    "torchaudio",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "transformers>=4.19.0",
    "ffmpeg-python>=0.2.0",
    "whisper>=1.1.10",
]
[tool.ruff]
line-length = 88
target-version = "py310"

[project.optional-dependencies]
dev = [
]
[tool.hatch.build.targets.wheel]
packages = ["src/app"]
