[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "voice2text"
version = "0.1.0"
description = "A sample Python project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "addict==2.4.0",
    "fastapi",
    "python-multipart",
    "openai-whisper",
    "flask==2.0.1",
    "uvicorn",
    "gunicorn==20.1.0",
    "werkzeug==2.0.1",
    "requests==2.28.1",
    "numpy>=1.20.0,<2.0.0",  # 锁定 numpy 1.x
    "pandas>=2.0.0",        # 使用现代 pandas
    "tqdm>=4.62.0",
    "librosa",
    "funasr",
    "modelscope",
    "speechbrain",
    "torch==2.2.1",
    "transformers>=4.19.0",
    "ffmpeg-python>=0.2.0",
    "accelerate>=0.26.0",
    "pyannote.audio==3.3.2"
]
[tool.ruff]
line-length = 88
target-version = "py310"

[project.optional-dependencies]
dev = [
]
[tool.hatch.build.targets.wheel]
packages = ["src/voice2text"]
